force-app/main/default/objects/HSTP_Plan__c/HSTP_Plan__c.object-meta.xml
<CustomObject>
    <label>HSTP Plan</label>
    <nameField>
        <displayFormat>HSTP-{0000}</displayFormat>
        <label>HSTP Plan ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>HSTP Plans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>