force-app/main/default/objects/HSTP_Plan__c/fields/Client_contact__c.field-meta.xml
<CustomField>
    <fullName>Client_contact__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Client Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>HSTP Plans</relationshipLabel>
    <relationshipName>HSTP_Plans</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>