force-app/main/default/objects/HSTP_Plan__c/fields/Complaint_Notes__c.field-meta.xml
<CustomField>
    <fullName>Complaint_Notes__c</fullName>
    <label>Complaint Notes</label>
    <type>TextArea</type>
</CustomField>