force-app/main/default/objects/HSTP_Plan__c/fields/Complaints__c.field-meta.xml
<CustomField>
    <fullName>Complaints__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Complaints</label>
    <type>Checkbox</type>
</CustomField>