force-app/main/default/objects/HSTP_Plan__c/fields/Date_of_Birth__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Birth__c</fullName>
    <formula>Client_contact__r.Birthdate</formula>
    <label>Date of Birth</label>
    <type>Date</type>
</CustomField>