force-app/main/default/objects/HSTP_Plan__c/fields/Date_of_Surgery__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Surgery__c</fullName>
    <label>Date of Surgery</label>
    <type>Date</type>
</CustomField>