force-app/main/default/objects/HSTP_Plan__c/fields/Eligibility_Check_Completed__c.field-meta.xml
<CustomField>
    <fullName>Eligibility_Check_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Eligibility Check Completed</label>
    <type>Checkbox</type>
</CustomField>