force-app/main/default/objects/HSTP_Plan__c/fields/Fund_Number__c.field-meta.xml
<CustomField>
    <fullName>Fund_Number__c</fullName>
    <label>Fund Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>