force-app/main/default/objects/HSTP_Plan__c/fields/GP__c.field-meta.xml
<CustomField>
    <fullName>GP__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>GP</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.Record_Type_Name__c</field>
            <operation>equals</operation>
            <value>General</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>HSTP Plans (GP)</relationshipLabel>
    <relationshipName>HSTP_Plans2</relationshipName>
    <type>Lookup</type>
</CustomField>