force-app/main/default/objects/HSTP_Plan__c/fields/Hospital__c.field-meta.xml
<CustomField>
    <fullName>Hospital__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>Hospital at which the client had their surgery</inlineHelpText>
    <label>Hospital</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordType.Name</field>
            <operation>equals</operation>
            <value>Clinic</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>HSTP Plans</relationshipLabel>
    <relationshipName>HSTP_Plans</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>