force-app/main/default/objects/HSTP_Plan__c/fields/HSTP_required_result_of_other_accident__c.field-meta.xml
<CustomField>
    <fullName>HSTP_required_result_of_other_accident__c</fullName>
    <defaultValue>false</defaultValue>
    <label>HSTP required result of other accident?</label>
    <type>Checkbox</type>
</CustomField>