force-app/main/default/objects/HSTP_Plan__c/fields/Initial_Mental_Score__c.field-meta.xml
<CustomField>
    <fullName>Initial_Mental_Score__c</fullName>
    <label>Initial Mental Score</label>
    <precision>8</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>