force-app/main/default/objects/HSTP_Plan__c/fields/Initial_Total__c.field-meta.xml
<CustomField>
    <fullName>Initial_Total__c</fullName>
    <label>Initial Total</label>
    <precision>7</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>