force-app/main/default/objects/HSTP_Plan__c/fields/Is_HSTP_requirement_a_result_of_MVA__c.field-meta.xml
<CustomField>
    <fullName>Is_HSTP_requirement_a_result_of_MVA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is HSTP requirement a result of MVA?</label>
    <type>Checkbox</type>
</CustomField>