force-app/main/default/objects/HSTP_Plan__c/fields/Item_Code__c.field-meta.xml
<CustomField>
    <fullName>Item_Code__c</fullName>
    <label>Item Code</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PODIS</fullName>
            </value>
            <value>
                <fullName>EDISC</fullName>
            </value>
            <value>
                <fullName>EDIS1</fullName>
            </value>
            <value>
                <fullName>ADDPT</fullName>
            </value>
            <value>
                <fullName>HEDIS</fullName>
            </value>
            <value>
                <fullName>HINIP</fullName>
            </value>
            <value>
                <fullName>INIPR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>