force-app/main/default/objects/HSTP_Plan__c/fields/Item_Number_Notes__c.field-meta.xml
<CustomField>
    <fullName>Item_Number_Notes__c</fullName>
    <label>Item Number Notes</label>
    <type>TextArea</type>
</CustomField>