force-app/main/default/objects/HSTP_Plan__c/fields/Lodged_a_claim_for_compensation_damages__c.field-meta.xml
<CustomField>
    <fullName>Lodged_a_claim_for_compensation_damages__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Lodged a claim for compensation/damages?</label>
    <type>Checkbox</type>
</CustomField>