force-app/main/default/objects/HSTP_Plan__c/fields/Missed_Referrals__c.field-meta.xml
<CustomField>
    <fullName>Missed_Referrals__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Missed Referrals</label>
    <type>Checkbox</type>
</CustomField>