force-app/main/default/objects/HSTP_Plan__c/fields/Missed_Referrals_Reason__c.field-meta.xml
<CustomField>
    <fullName>Missed_Referrals_Reason__c</fullName>
    <label>Missed Referrals Reason</label>
    <type>TextArea</type>
</CustomField>