force-app/main/default/objects/HSTP_Plan__c/fields/Post_HOOS__c.field-meta.xml
<CustomField>
    <fullName>Post_HOOS__c</fullName>
    <label>Post-HOOS</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>