force-app/main/default/objects/HSTP_Plan__c/fields/Post_KOOS__c.field-meta.xml
<CustomField>
    <fullName>Post_KOOS__c</fullName>
    <label>Post-KOOS</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>