force-app/main/default/objects/HSTP_Plan__c/fields/Post_Physical_Score__c.field-meta.xml
<CustomField>
    <fullName>Post_Physical_Score__c</fullName>
    <label>Post Physical Score</label>
    <precision>8</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>