force-app/main/default/objects/HSTP_Plan__c/fields/Pre_HOOS__c.field-meta.xml
<CustomField>
    <fullName>Pre_HOOS__c</fullName>
    <label>Pre-HOOS</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>