force-app/main/default/objects/HSTP_Plan__c/fields/Pre_KOOS__c.field-meta.xml
<CustomField>
    <fullName>Pre_KOOS__c</fullName>
    <label>Pre-KOOS</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>