force-app/main/default/objects/HSTP_Plan__c/fields/Provider__c.field-meta.xml
<CustomField>
    <fullName>Provider__c</fullName>
    <inlineHelpText>Private Healthcare Insurance name</inlineHelpText>
    <label>Provider</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>HCF</fullName>
            </value>
            <value>
                <fullName>Mulgrave Bupa</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>