force-app/main/default/objects/HSTP_Plan__c/fields/RAPT_Score__c.field-meta.xml
<CustomField>
    <fullName>RAPT_Score__c</fullName>
    <inlineHelpText>Between 0 and 12</inlineHelpText>
    <label>RAPT Score</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>