force-app/main/default/objects/HSTP_Plan__c/fields/Re_admission__c.field-meta.xml
<CustomField>
    <fullName>Re_admission__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Re-admission to Hospital</label>
    <type>Checkbox</type>
</CustomField>