force-app/main/default/objects/HSTP_Plan__c/fields/Referral_Reasons__c.field-meta.xml
<CustomField>
    <fullName>Referral_Reasons__c</fullName>
    <label>Referral Reasons</label>
    <type>TextArea</type>
</CustomField>