force-app/main/default/objects/HSTP_Plan__c/fields/Referred_for_Further_Physio__c.field-meta.xml
<CustomField>
    <fullName>Referred_for_Further_Physio__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Referred for Further Physio</label>
    <type>Checkbox</type>
</CustomField>