force-app/main/default/objects/HSTP_Plan__c/fields/Surgeon__c.field-meta.xml
<CustomField>
    <fullName>Surgeon__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Surgeon</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.Record_Type_Name__c</field>
            <operation>equals</operation>
            <value>General</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>HSTP Plans (Surgeon)</relationshipLabel>
    <relationshipName>HSTP_Plans1</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>