force-app/main/default/objects/HSTP_Plan__c/fields/Veteran_s_legislation_entitlement__c.field-meta.xml
<CustomField>
    <fullName>Veteran_s_legislation_entitlement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Veteran&apos;s legislation entitlement?</label>
    <type>Checkbox</type>
</CustomField>