force-app/main/default/objects/HSTP_Plan__c/fields/Was_the_injury_work_related__c.field-meta.xml
<CustomField>
    <fullName>Was_the_injury_work_related__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Was the injury work-related?</label>
    <type>Checkbox</type>
</CustomField>