force-app/main/default/objects/HSTP_Plan__c/validationRules/Complaint_Notes_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Complaint_Notes_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
 Complaints__c = TRUE,
ISBLANK( Complaint_Notes__c )
)</errorConditionFormula>
    <errorDisplayField>Complaint_Notes__c</errorDisplayField>
    <errorMessage>Please enter complaint notes</errorMessage>
</ValidationRule>