force-app/main/default/objects/HSTP_Plan__c/validationRules/Missed_Referrals.validationRule-meta.xml
<ValidationRule>
    <fullName>Missed_Referrals</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
Missed_Referrals__c = TRUE,
ISBLANK( Missed_Referrals_Reason__c )
)</errorConditionFormula>
    <errorDisplayField>Missed_Referrals_Reason__c</errorDisplayField>
    <errorMessage>Please enter missed referrals reasons</errorMessage>
</ValidationRule>