force-app/main/default/objects/HSTP_Plan__c/validationRules/RAPT_Score_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>RAPT_Score_Validation</fullName>
    <active>true</active>
    <description>Enter between 0 and 12</description>
    <errorConditionFormula>OR(RAPT_Score__c &lt; 0, RAPT_Score__c &gt; 12)</errorConditionFormula>
    <errorDisplayField>RAPT_Score__c</errorDisplayField>
    <errorMessage>RAPT score cannot exceed 12</errorMessage>
</ValidationRule>