force-app/main/default/objects/HSTP_Plan__c/validationRules/Referral_Reasons_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Referral_Reasons_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
 Referred_for_Further_Physio__c = TRUE,
ISBLANK( Referral_Reasons__c )
)</errorConditionFormula>
    <errorDisplayField>Referral_Reasons__c</errorDisplayField>
    <errorMessage>Please enter referral reasons</errorMessage>
</ValidationRule>