force-app/main/default/objects/HSTP_Plan__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Client_contact__c</columns>
    <columns>Fund_Number__c</columns>
    <columns>RAPT_Score__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>